# web-batch-request

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt
modules/: config.py  fileio.py  utils.py  worker.py
web/: index.html
web/css/: custom.css
web/js/: index.js  tables.js  utils.js
