[project]
name = "web-batch-request"
version = "0.1.0"
description = "Web批量请求器"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "pywebview>=6.0,<7",
    "requests[socks]>=2.32.5,<3",
    "pyyaml>=6.0.2,<7",
    "beautifulsoup4>=4.13.5,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = "3.11.*"
